# sdkwork-order

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cargo_check_clean.txt  cargo_check_errors.txt  cargo_check_short.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: verify.yml
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/app-api/order/: order-app-api.openapi.json
apis/backend-api/order/: order-backend-api.openapi.json
apps/: README.md
apps/sdkwork-order-common/: README.md
apps/sdkwork-order-pc/: index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.ts
apps/sdkwork-order-pc/specs/: dependency.composition.json
apps/sdkwork-order-pc/src/: app.css  main.tsx
crates/sdkwork-api-order-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-order-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-order-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-order-assembly/tests/: application_assembly.rs  contract_manifest_alignment.rs
crates/sdkwork-api-order-standalone-gateway/: Cargo.toml
crates/sdkwork-api-order-standalone-gateway/src/: main.rs
crates/sdkwork-commerce-order-repository-sqlx/: Cargo.toml
crates/sdkwork-commerce-order-repository-sqlx/src/: lib.rs  postgres_after_sales.rs  postgres_checkout.rs  postgres_fulfillment.rs  postgres_management.rs  postgres_order.rs  postgres_shipment.rs  sqlite_after_sales.rs  sqlite_checkout.rs  sqlite_fulfillment.rs  sqlite_management.rs  sqlite_order.rs  sqlite_shipment.rs
crates/sdkwork-commerce-order-service/: Cargo.toml  README.md
crates/sdkwork-commerce-order-service/specs/: README.md  component.spec.json
crates/sdkwork-commerce-order-service/src/commands/: mod.rs
crates/sdkwork-commerce-order-service/src/domain/: mod.rs
crates/sdkwork-commerce-order-service/src/ports/: mod.rs
crates/sdkwork-commerce-order-service/src/queries/: after_sales.rs  checkout.rs  fulfillment.rs  management.rs  mod.rs  owner.rs  shipment.rs
crates/sdkwork-commerce-order-service/src/service/: mod.rs
crates/sdkwork-commerce-order-service/src/validation/: mod.rs  request_hash.rs
crates/sdkwork-commerce-order-service/tests/: order_standard.rs
crates/sdkwork-order-api-server/: Cargo.toml
crates/sdkwork-order-api-server/src/: lib.rs  main.rs
crates/sdkwork-order-database-host/: Cargo.toml
crates/sdkwork-order-database-host/src/: lib.rs
crates/sdkwork-order-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-order-gateway-assembly/specs/: component.spec.json
crates/sdkwork-order-gateway-assembly/src/: bootstrap.rs  contract_fallback.rs  generated.rs  lib.rs
crates/sdkwork-order-gateway-assembly/tests/: application_assembly.rs  contract_manifest_alignment.rs
crates/sdkwork-order-integration-account/: Cargo.toml
crates/sdkwork-order-integration-account/src/: http_adapter.rs  lib.rs  store_adapter.rs
crates/sdkwork-order-integration-account/tests/: account_http_adapter_standard.rs  points_recharge_store_e2e_standard.rs
crates/sdkwork-order-integration-membership/: Cargo.toml
crates/sdkwork-order-integration-membership/src/: http_adapter.rs  lib.rs
crates/sdkwork-order-integration-payment/: Cargo.toml
crates/sdkwork-order-integration-payment/src/: lib.rs
crates/sdkwork-order-integration-payment/tests/: payment_refund_executor_standard.rs
crates/sdkwork-order-integration-promotion/: Cargo.toml
crates/sdkwork-order-integration-promotion/src/: lib.rs
crates/sdkwork-order-repository-sqlx/: Cargo.toml
crates/sdkwork-order-service/: Cargo.toml  README.md
crates/sdkwork-order-service-host/: Cargo.toml
crates/sdkwork-order-service-host/src/: lib.rs
crates/sdkwork-order-service/specs/: README.md  component.spec.json
crates/sdkwork-order-service/src/: lib.rs
crates/sdkwork-order-service/src/commands/: account_value.rs  fulfillment.rs  membership.rs  mod.rs  recharge.rs
crates/sdkwork-order-service/src/domain/: account_value.rs  fulfillment.rs  membership.rs  mod.rs  recharge.rs
crates/sdkwork-order-service/src/ports/: account_ledger.rs  account_value.rs  membership_fulfillment.rs  mod.rs  owner_order_payment.rs  points_recharge_fulfillment.rs
crates/sdkwork-order-service/src/queries/: after_sales.rs  checkout.rs  fulfillment.rs  management.rs  mod.rs  owner.rs  recharge.rs  shipment.rs
crates/sdkwork-order-service/src/service/: account_value_fulfillment.rs  account_value_request_execution.rs  coupon_recharge_fulfillment.rs  mod.rs  order_payment_settlement.rs  points_recharge_fulfillment.rs
crates/sdkwork-order-service/src/validation/: mod.rs  request_hash.rs  write_command_hash.rs
crates/sdkwork-order-service/tests/: account_value_fulfillment_standard.rs  account_value_order_standard.rs  account_value_request_execution_standard.rs  order_standard.rs  points_recharge_fulfillment_standard.rs
crates/sdkwork-order-standalone-gateway/: Cargo.toml
crates/sdkwork-order-standalone-gateway/src/: main.rs
crates/sdkwork-router-order-app-api/: Cargo.toml
crates/sdkwork-router-order-backend-api/: Cargo.toml
crates/sdkwork-routes-order-app-api/: Cargo.toml
crates/sdkwork-routes-order-backend-api/: Cargo.toml
database/: README.md  database.manifest.json
database/contract/: schema.yaml  table-registry.json
database/seeds/: seed.manifest.json
docs/: INDEX.yaml  README.md
docs/product/prd/: PRD.md
scripts/openapi/: materialize-recharges-openapi.mjs  prune-legacy-openapi.mjs
scripts/test/: postgres-parity.mjs
sdks/sdkwork-order-app-sdk/: .sdkwork-assembly.json  sdk-manifest.json
sdks/sdkwork-order-backend-sdk/: .sdkwork-assembly.json  sdk-manifest.json
specs/: ACCOUNT_VALUE_ORDER_SPEC.md  README.md  RECHARGE_ORDER_SPEC.md  commerce-checkout-topology.spec.json  commerce-payment-webhook.spec.json  commerce-recharge.spec.json  component.spec.json  iam.module.manifest.json
tests/static/: openapi-contract.test.mjs  placeholder.test.mjs
tools/: order_backend_permission_align.mjs
(+108 files in other folders)
