[workspace]
resolver = "2"
members = [
    "crates/sdkwork-order-gateway-assembly",
  "crates/sdkwork-order-service",
  "crates/sdkwork-order-repository-sqlx",
  "crates/sdkwork-order-integration-account",
  "crates/sdkwork-order-integration-payment",
  "crates/sdkwork-order-integration-membership",
  "crates/sdkwork-routes-order-app-api",
  "crates/sdkwork-routes-order-backend-api",
  "crates/sdkwork-order-database-host",
  "crates/sdkwork-order-service-host",
  "crates/sdkwork-order-standalone-gateway",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
sdkwork_contract_service = { path = "../sdkwork-account/crates/sdkwork-contract-service", package = "sdkwork-contract-service" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service", package = "sdkwork-iam-context-service" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork_order_service = { path = "crates/sdkwork-order-service", package = "sdkwork-order-service" }
sdkwork_payment_service = { path = "../sdkwork-payment/crates/sdkwork-payment-service", package = "sdkwork-payment-service" }
sdkwork_order_repository_sqlx = { path = "crates/sdkwork-order-repository-sqlx", package = "sdkwork-order-repository-sqlx" }
sdkwork_payment_repository_sqlx = { path = "../sdkwork-payment/crates/sdkwork-payment-repository-sqlx", package = "sdkwork-payment-repository-sqlx" }
sdkwork_payment_providers = { path = "../sdkwork-payment/crates/sdkwork-payment-providers", package = "sdkwork-payment-providers" }
sdkwork_routes_order_app_api = { path = "crates/sdkwork-routes-order-app-api", package = "sdkwork-routes-order-app-api" }
sdkwork_routes_order_backend_api = { path = "crates/sdkwork-routes-order-backend-api", package = "sdkwork-routes-order-backend-api" }
sdkwork_order_gateway_assembly = { path = "crates/sdkwork-order-gateway-assembly", package = "sdkwork-order-gateway-assembly" }
sdkwork_order_database_host = { path = "crates/sdkwork-order-database-host", package = "sdkwork-order-database-host" }
sdkwork_order_service_host = { path = "crates/sdkwork-order-service-host", package = "sdkwork-order-service-host" }
sdkwork_order_integration_account = { path = "crates/sdkwork-order-integration-account", package = "sdkwork-order-integration-account" }
sdkwork_order_integration_payment = { path = "crates/sdkwork-order-integration-payment", package = "sdkwork-order-integration-payment" }
sdkwork_order_integration_membership = { path = "crates/sdkwork-order-integration-membership", package = "sdkwork-order-integration-membership" }
sdkwork_account_service = { path = "../sdkwork-account/crates/sdkwork-account-service", package = "sdkwork-account-service" }
sdkwork_account_repository_sqlx = { path = "../sdkwork-account/crates/sdkwork-account-repository-sqlx", package = "sdkwork-account-repository-sqlx" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
