[package]
name = "sdkwork-api-order-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-order application HTTP plane."

[lib]
name = "sdkwork_api_order_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-routes-order-app-api.workspace = true
sdkwork-routes-order-backend-api.workspace = true
