[package]
name = "sdkwork-api-order-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-order application HTTP plane."

[lib]
name = "sdkwork_api_order_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_order_service_host.workspace = true
sdkwork_order_database_host.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-database-spi.workspace = true
sdkwork-web-bootstrap.workspace = true
sdkwork-web-core.workspace = true
sdkwork-routes-order-app-api.workspace = true
sdkwork-routes-order-backend-api.workspace = true
