[package]
name = "sdkwork-api-order-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-api-order-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_api_order_assembly.workspace = true
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_order_service_host.workspace = true
sdkwork-database-sqlx.workspace = true
sqlx = { workspace = true }
