[package]
name = "sdkwork-order-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "order-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork_router_order_app_api.workspace = true
sdkwork_router_order_backend_api.workspace = true
sdkwork_order_service_host.workspace = true
