[package]
name = "sdkwork-order-integration-account"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Order → Account ledger integration adapters for points recharge fulfillment."

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sdkwork_contract_service.workspace = true
sdkwork_order_service.workspace = true
sdkwork_account_service.workspace = true
sdkwork_account_repository_sqlx.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-utils-rust.workspace = true
dotenvy = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
sdkwork_order_repository_sqlx = { workspace = true, features = ["test-support"] }
sdkwork_account_repository_sqlx = { workspace = true, features = ["test-support"] }
