[package]
name = "sdkwork-order-integration-membership"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Order → Membership fulfillment integration adapters."

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sdkwork_contract_service.workspace = true
sdkwork_order_service.workspace = true
sdkwork-utils-rust.workspace = true
