[package]
name = "sdkwork-order-integration-payment"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Order to Payment executor integration adapters."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_contract_service.workspace = true
sdkwork_order_service.workspace = true
sdkwork_payment_providers.workspace = true
sdkwork_payment_repository_sqlx.workspace = true
sdkwork_payment_service.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
dotenvy = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
