[package]
name = "sdkwork-order-integration-promotion"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-database-sqlx.workspace = true
sdkwork_contract_service.workspace = true
sdkwork_order_service.workspace = true
sdkwork_promotion_service.workspace = true
sdkwork_promotion_repository_sqlx.workspace = true
