[package]
name = "sdkwork-order-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-database-sqlx.workspace = true
sdkwork-database-spi.workspace = true
sdkwork_order_database_host.workspace = true
sdkwork_order_integration_account.workspace = true
sdkwork_order_service.workspace = true
dotenvy = { workspace = true }
