[package]
name = "sdkwork-order-service"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "SDKWork commerce order lifecycle domain rules for local/private Rust deployments."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_contract_service.workspace = true
sdkwork-utils-rust.workspace = true

[dev-dependencies]
tokio = { workspace = true }
