[package]
name = "sdkwork-order-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-order-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_order_gateway_assembly = { package = "sdkwork-order-gateway-assembly", path = "../sdkwork-order-gateway-assembly" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_order_service_host.workspace = true
sdkwork-database-sqlx.workspace = true
sqlx = { workspace = true }
